--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -18,7 +18,7 @@
 }
 
 #sidebar.collapse {
-    width: 2.5%;
+    width: 50px;
 }
 
 #sidebar-name {
